--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<body>
 		<h1> Tomie's HTML001 Home Page </h1>
 		<h2> My major is: </h2>
-		<p> Back in the day, my Cincinnati State major was Computer Programming </p>
+		<p> Back in the day, my Cincinnati State major was Computer Programming. I love programming! </p>
 		<h2> My hobbies include: </h2>
 		<p> Going to the beach, scuba diving, run 5k </p>
 		<h2> Why I love CState </h2>
